<?xml version="1.0"?>
<package format="3">
  <name>armpi_fpv</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for armpi_fpv</p>
    <p>This package contains configuration data, 3D models and launch files for the armpi_fpv robot.</p>
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  
  <!-- Use ament_cmake as the build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Update dependencies for ROS 2 -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>

