<?xml version="1.0"?>
<package format="3">
  <name>hiwonder_servo_driver</name>
  <version>0.0.0</version>
  <description>Ported hiwonder_servo_driver for ROS 2</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
