<?xml version="1.0"?>
<package format="3">
  <name>hiwonder_servo_msgs</name>
  <version>0.0.0</version>
  <description>The hiwonder_servo_msgs package</description>

  <maintainer email="lucas@todo.todo">lucas</maintainer>
  <license>TODO</license>

  <!-- Use ament as the build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- For generating ROS interfaces -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Declare runtime dependencies for generated messages -->
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optionally, if using Python runtime support -->
  <!-- <exec_depend>rosidl_runtime_py</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
